--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -8,7 +8,7 @@ body {
   font-weight: 800;
 }
 
-.small-para {
+.para.small-para {
   font-size: 14px;
   font-weight: 800;
 }
@@ -17,6 +17,10 @@ body {
   font-size: 22px;
 }
 
+#confirm-button {
+  background-color: forestgreen;
+  color: white;
+}
 .confirm {
   background: green;
   color: white;
@@ -29,7 +33,7 @@ body {
   font-size: 20px;
 }
 
-.child {
+.text > .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
