--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,8 +1,21 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
+.left-links ul, .right-links ul {
+  display: flex;
+  gap: 10px;
+}
+.left-links ul {
+  padding-left: 10px;
+}
+.right-links ul {
+  padding-right: 10px;
+}
 .logo {
   font-size: 48px;
   font-weight: 900;
@@ -14,6 +27,8 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  /* padding: 0; */
+  /* margin: 0; */
 }
 
 a {
