--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,19 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+}
+.menu-left, .menu-right {
+  display: flex;
+  align-items: center;
+}
+.menu-left .links {
+  display: flex;
+  gap: 10px;
+  padding: 16px;
 }
 
 .profile-image {
@@ -20,6 +33,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-left: 10px;
 }
 
 .logo {
