--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +25,22 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+/* SOLUTION */
+.flex-container {
+  width: 90%;
+  margin: 0 auto;
+  display: flex; 
+}
+.flex-item {
+  margin: 32px 52px;
+  width: 200px;
+}
+.text {
+  /* margin-top: 15px; */
+  text-align: center;
+}
+.img {
+  display: flex;
+  justify-content: center;
 }
