--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,31 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+/* SOLUTION */
+.modal {
+  padding: 15px;
+  display: flex;
+  justify-content: space-around;
+  gap: 15px;
+}
+.icon {
+ flex-basis: 10%;
+}
+.main {
+  flex-basis: 90%;
+}
+.header-and-close-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header {
+  font-weight: bold;
+  font-size: 18px;
+}
+.continue-and-cancel-btn {
+  margin: 20px 0 0 0 ;
+}
+.text {
+  margin-top: 7px;
+}
