--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -27,3 +27,47 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+/* SOLUTION */
+body {
+  display: flex;
+  flex-direction: column;
+}
+.header {
+  font-weight: 900;
+  padding-left: 16px;
+  display: flex;
+  align-items: center;
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.content {
+  display: flex;
+}
+.sidebar {
+  flex-shrink: 0;
+  padding: 16px;
+}
+li {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+.cards {
+  display: flex;
+  flex-direction: row;
+  padding: 32px;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+.cards .card {
+  width: 250px;
+  height: auto;
+  padding: 20px;
+  text-align: justify;
+} 
